AShvedov/hw17 : added endpoint to check the result of work
